--- a/themes/mytheme/style.css
+++ b/themes/mytheme/style.css
@@ -23,13 +23,23 @@ body {
 	font-family: sans-serif;
 }
 
+figure {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 article figure:first-child {
-	margin: 0;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 img {
 	max-width: 100%;
 	height: auto;
+}
+
+iframe {
+	width: 100%;
 }
 
 a {
@@ -214,16 +224,16 @@ time {
 
 /* スクリーンリーダー用のテキスト */
 .screen-reader-text {
-  border: 0;
-  clip: rect(1px, 1px, 1px, 1px);
-  clip-path: inset(50%);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute !important;
-  width: 1px;
-  word-wrap: normal !important;
+	border: 0;
+	clip: rect(1px, 1px, 1px, 1px);
+	clip-path: inset(50%);
+	height: 1px;
+	margin: -1px;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+	width: 1px;
+	word-wrap: normal !important;
 }
 
 
@@ -385,14 +395,10 @@ time {
 	padding: 10px;
 	border: none;
 	background-color: #ffaa00;
+	-webkit-appearance: none;
 }
 
 /* 仕上げ */
-figure[class*="wp-block"] {
-	margin-left: 0;
-	margin-right: 0;
-}
-
 .alignleft {
 	float: left;
 	margin: 0 2em 2em 0;
