--- a/themes/mytheme1/editor-style.css
+++ b/themes/mytheme1/editor-style.css
@@ -6,7 +6,7 @@ body {
 	font-family: sans-serif;
 }
 
-.block-editor-block-list__block[data-type="core/paragraph"] p {
+p {
 	line-height: 2;
 }
 
@@ -15,6 +15,6 @@ body {
 }
 
 .wp-block {
-	max-width: calc( 760px + 30px );
+	max-width: 760px;
 }
 
