--- a/themes/mytheme6/lp-guten/lp-guten-both.css
+++ b/themes/mytheme6/lp-guten/lp-guten-both.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 
 /* フォント */
-.editor-block-list__layout,
+.block-editor-block-list__layout,
 .myblocks {
 	font-family: 'Montserrat', sans-serif;
 }
 
-.editor-block-list__layout {
+.block-editor-block-list__layout {
 	--f1: 2.44em;
 	--f2: 1.95em;
 	--f3: 1.56em;
@@ -52,7 +52,7 @@
 
 /* メディアと文章：高さアレンジ（カラム塗りつぶし） */
 @media (min-width: 601px) {
-	.is-style-lpmedia.is-image-fill figure {
+	.is-style-lpmedia.is-image-fill figure.wp-block-media-text__media {
 		min-height: 480px;
 	}
 }
