--- a/themes/mytheme5-2/editor-style.css
+++ b/themes/mytheme5-2/editor-style.css
@@ -15,19 +15,14 @@ p {
 }
 
 .wp-block {
-	max-width: 75%;
+	max-width: 614px;
 }
 
 .wp-block[data-align="wide"] {
-	max-width: 100%;
+	max-width: 819px;
 }
 
 .wp-block[data-align="full"] {
 	max-width: none;
 }
 
-@media (max-width: 599px) {
-	.wp-block {
-		max-width: 94.7%;
-	}
-}
